<resources>
    <string name="launcher_name">Calculator+</string>
    <string name="brand_name">Calculator+</string>
    <string name="app_name">@string/brand_name</string>
    <string name="app_bar_brand">Calculator+</string>
    <string name="app_bar_product">CALCULATOR</string>
    <string name="url_app_link">https://play.google.com/store/apps/details?id=net.smartlogic.unitconverter</string>
    <string name="url_app_short_link">https://smartup.page.link/unitconverter</string>
    <string name="url_other_apps">https://play.google.com/store/apps/dev?id=6614685995890456247</string>
    <string name="url_smartup_website">https://smartuptech.github.io</string>
    <string name="url_privacy_policy">https://smartuptech.github.io/privacy_policy.html</string>
    <string name="description">Calculator+ is a wonderful app for everyday maths, unit conversion, and currency rates.</string>
    <string name="keywords">Calculator+ app for maths, unit conversion, and currency conversion</string>
    <string name="company">SMARTUP</string>
    <string name="note_share_body">Hi,\n\nI am using Calculator+.\nIt\'s accurate, customizable yet light-weight. Must try it.\n\n</string>
    <string name="share">Share</string>
    <string name="url_exchangeratesapi">exchangeratesapi.io</string>
    <string name="unit_converter">Unit</string>
    <string name="currency_converter">Currency</string>
    <string name="calculator">Calculator</string>
    <string name="nav_calculator">Calculate</string>
    <string name="tab_calculate">Calculate</string>
    <string name="tab_convert">Convert</string>
    <string name="graphy_empty">Calculate first, then open Graphy to see how the answer was produced.</string>
    <string name="graphy_converter_empty">Enter a value to see how the conversion is calculated.</string>
    <string name="same_unit">same unit</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="no_conversion_history">No conversion history yet</string>
    <string name="nav_converter">Convert</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_history">History</string>
    <string name="nav_play">Play</string>
    <string name="nav_play_favourites">Favourites</string>
    <string name="games_offline_title">Internet connection needed</string>
    <string name="games_offline_message">Connect to the internet to play games.</string>
    <string name="games_offline_action">OK</string>
    <string name="prefs_key_sounds_title">Key Sounds</string>
    <string name="prefs_key_sounds_summary">Play subtle sounds when using calculator keys</string>
    <string name="prefs_key_vibration_title">Key Vibration</string>
    <string name="prefs_key_vibration_summary">Use subtle vibration when using calculator keys</string>
    <string name="games_loading">Getting your games ready…</string>
    <string name="games_load_error">Games couldn’t load. Check your connection and try again.</string>
    <string name="games_update_webview">Update Android System WebView to play games securely.</string>
    <string name="games_save_error">Your result couldn’t be saved. Please try again.</string>
    <string name="games_retry">Try again</string>
    <string name="games_privacy_options">Games ad privacy choices</string>
    <string name="explore_search_hint">Search calculators</string>
    <string name="no_favorites">No favorites yet</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="nav_open_drawer">Open navigation menu</string>
    <string name="drawer_section_calculators">Calculators</string>
    <string name="drawer_section_converter">Converter</string>
    <string name="drawer_unit_converter">Unit Converter</string>
    <string name="drawer_section_utilities">Utilities</string>
    <string name="drawer_section_general">General</string>
    <string name="timer">Timer</string>
    <string name="timer_recent">Recent Timers</string>
    <string name="timer_label_hint">Label (optional)</string>
    <string name="timer_default_label">Timer</string>
    <string name="timer_hours">hours</string>
    <string name="timer_min">min</string>
    <string name="timer_sec">sec</string>
    <string name="timer_start">Start timer</string>
    <string name="timer_pause">Pause timer</string>
    <string name="timer_resume">Resume timer</string>
    <string name="timer_restart">Restart timer</string>
    <string name="timer_reset">Reset timer</string>
    <string name="timer_dismiss">Dismiss alarm</string>
    <string name="timer_times_up">Time\'s up</string>
    <string name="timer_replace_title">Replace active timer?</string>
    <string name="timer_replace_message">Starting this timer will stop the one currently running.</string>
    <string name="timer_replace_confirm">Replace</string>
    <string name="timer_notification_channel">Timer</string>
    <string name="timer_notification_running">%1$s · %2$s remaining</string>
    <string name="timer_notification_paused">%1$s · paused at %2$s</string>
    <string name="timer_notification_complete">%1$s finished</string>
    <string name="timer_widget_description">Calculator+ timer</string>
    <string name="timer_widget_open">Open timer</string>
    <string name="clear_history">Clear history</string>
    <string name="plus">+</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>
    <string name="clear">AC</string>
    <string name="history">History</string>
    <string name="no_history">No history yet</string>
    <string name="scientific_mode">Scientific Mode</string>
    <string name="standard_mode">Standard Mode</string>
    <string name="history_cleared">History cleared</string>
    <string name="invalid_expression">Invalid Expression</string>
    <string name="graphy">Graphy</string>
    <string name="show_graphy">Show Graphy</string>
    <string name="hide_graphy">Hide Graphy</string>
    <string name="graphy_explanation_label">How this answer was calculated</string>
    <string name="graphy_panel_content_description">Graphy calculation explanation panel</string>
    <string name="graphy_flowchart_content_description">Calculation flowchart diagram</string>
    <string name="graphy_info_content_description">Graphy node guide</string>
    <string name="graphy_legend_title">Graphy node guide</string>
    <string name="graphy_legend_input">User-entered values</string>
    <string name="graphy_legend_constant">Fixed values / conversion factors</string>
    <string name="graphy_legend_operator">Mathematical operation</string>
    <string name="graphy_legend_result">Intermediate calculated result</string>
    <string name="graphy_legend_final">Final calculated answer</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="minus">−</string>
    <string name="double_zero">00</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="area">Area</string>
    <string name="cooking">Cooking</string>
    <string name="storage">Storage</string>
    <string name="energy">Energy</string>
    <string name="fuel_consumption">Fuel</string>
    <string name="length">Length</string>
    <string name="mass">Weight</string>
    <string name="power">Power</string>
    <string name="pressure">Pressure</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="time">Time</string>
    <string name="torque">Torque</string>
    <string name="volume">Volume</string>
    <string name="sq_kilometre">Sq Kilometre</string>
    <string name="sq_metre">Sq Metre</string>
    <string name="sq_centimetre">Sq Centimetre</string>
    <string name="hectare">Hectare</string>
    <string name="sq_mile">Sq Mile</string>
    <string name="sq_yard">Sq Yard</string>
    <string name="sq_foot">Sq Foot</string>
    <string name="sq_inch">Sq Inch</string>
    <string name="acre">Acre</string>
    <string name="sq_decimetre">Sq Decimetre</string>
    <string name="bit">Bit</string>
    <string name="Byte">Byte</string>
    <string name="kilobit">Kilobit</string>
    <string name="kilobyte">Kilobyte</string>
    <string name="megabit">Megabit</string>
    <string name="megabyte">Megabyte</string>
    <string name="gigabit">Gigabit</string>
    <string name="gigabyte">Gigabyte</string>
    <string name="terabit">Terabit</string>
    <string name="terabyte">Terabyte</string>
    <string name="petabit">Petabit</string>
    <string name="petabyte">Petabyte</string>
    <string name="exabit">Exabit</string>
    <string name="exabyte">Exabyte</string>
    <string name="joule">Joule</string>
    <string name="kilojoule">Kilojoule</string>
    <string name="calorie">Calorie</string>
    <string name="kilocalorie">Kilocalorie</string>
    <string name="btu">BTU</string>
    <string name="ft_lbF">ft-lbf</string>
    <string name="in_lbF">in-lbf</string>
    <string name="kilowatt_hour">Kilowatt-Hour</string>
    <string name="watt_hour">Watt-Hour</string>
    <string name="megajoule">Megajoule</string>
    <string name="megawatt_hour">Megawatt-Hour</string>
    <string name="electron_volt">Electron Volt</string>
    <string name="mpg_us">Miles/gallon (US)</string>
    <string name="mpg_uk">Miles/gallon (UK)</string>
    <string name="l_100k">Litres/100km</string>
    <string name="km_l">Kilometres/litre</string>
    <string name="miles_l">Miles/litre</string>
    <string name="kilometre">Kilometre</string>
    <string name="mile">Miles</string>
    <string name="metre">Metre</string>
    <string name="menu_other_apps">Other Apps</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_info">Information</string>
    <string name="prefs_title_formatting">Customization</string>
    <string name="prefs_summary_number_decimals">Set the number of decimal places to be shown in result</string>
    <string name="prefs_title_number_decimals">Number of Decimals</string>
    <string name="prefs_summary_group_separator">Set the group separator to be shown in result</string>
    <string name="prefs_title_group_separator">Group Separator</string>
    <string name="prefs_summary_decimal_separator">Set the decimal separator to be shown in result</string>
    <string name="prefs_title_decimal_separator">Decimal Separator</string>
    <string name="settings_open">Open settings</string>
    <string name="pref_rate_title">Rate us on Google Play</string>
    <string name="pref_rate_summary">You seem to be liking our app. Why not rate us 5 stars?</string>
    <string name="pref_share_title">Spread a word</string>
    <string name="pref_share_summary">Please help us by sharing this app with your friends, family and WhatsApp groups.</string>
    <string name="pref_website_title">Find us on Web</string>
    <string name="pref_website_summary">Visit our website to know more about us.</string>
    <string name="pref_privacy_title">Privacy Policy</string>
    <string name="pref_privacy_summary">Because your privacy is important to us.</string>
    <string name="pref_version_title">Version</string>
    <string name="default_number_decimals">4</string>
    <string name="default_group_separator">None</string>
    <string name="default_decimal_separator">.</string>
    <string name="converter_copy_result">Copy conversion</string>
    <string name="converter_backspace">Delete last digit</string>
    <string name="converter_clear_input">Clear input</string>
    <string name="converter_clear_key" translatable="false">AC</string>
</resources>