<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="*"
    android:shrinkColumns="*"
    android:padding="@dimen/converter_spacing">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/converter_key_min_height"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/seven"
            style="@style/ConverterNumberKey"
            android:text="@string/seven" />
        <Button
            android:id="@+id/eight"
            style="@style/ConverterNumberKey"
            android:text="@string/eight" />
        <Button
            android:id="@+id/nine"
            style="@style/ConverterNumberKey"
            android:text="@string/nine" />
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/converter_key_min_height"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/four"
            style="@style/ConverterNumberKey"
            android:text="@string/four" />
        <Button
            android:id="@+id/five"
            style="@style/ConverterNumberKey"
            android:text="@string/five" />
        <Button
            android:id="@+id/six"
            style="@style/ConverterNumberKey"
            android:text="@string/six" />
        <ImageButton
            android:id="@+id/backspace"
            style="@style/ConverterKeyIcon"
            android:contentDescription="@string/converter_backspace"
            android:src="@drawable/backspace" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/converter_key_min_height"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/one"
            style="@style/ConverterNumberKey"
            android:text="@string/one" />
        <Button
            android:id="@+id/two"
            style="@style/ConverterNumberKey"
            android:text="@string/two" />
        <Button
            android:id="@+id/three"
            style="@style/ConverterNumberKey"
            android:text="@string/three" />
        <ImageButton
            android:id="@+id/copy"
            style="@style/ConverterKeyIcon"
            android:contentDescription="@string/converter_copy_result"
            android:src="@drawable/ic_copy" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:minHeight="@dimen/converter_key_min_height"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/zero"
            style="@style/ConverterNumberKey"
            android:text="@string/zero" />
        <Button
            android:id="@+id/double_zero"
            style="@style/ConverterNumberKey"
            android:text="@string/double_zero" />
        <Button
            android:id="@+id/dot"
            style="@style/ConverterNumberKey"
            android:text="@string/dot" />
        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="@dimen/converter_key_min_height">
            <Button
                android:id="@+id/minus"
                style="@style/ConverterOperatorKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/minus" />
            <Button
                android:id="@+id/ac"
                style="@style/ConverterActionKey"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/converter_clear_key"
                android:contentDescription="@string/converter_clear_input" />
        </FrameLayout>
    </TableRow>
</TableLayout>
