<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/calculator"
        android:icon="@drawable/ic_calculator"
        android:title="@string/nav_calculator" />

    <item
        android:id="@+id/converter"
        android:icon="@drawable/ic_converter"
        android:title="@string/nav_converter" />

    <item
        android:id="@+id/explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore"
        android:visible="false" />

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/nav_play_favourites"
        android:visible="false" />

    <item
        android:id="@+id/play"
        android:icon="@drawable/ic_play_games"
        android:title="@string/nav_play" />

</menu>
